--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a tutorial from the docs in the website",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "author": "Sayan Dasgupta",
   "license": "MIT",
