--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sayan Dasgupta",
   "license": "MIT",
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.67",
     "electron": "^21.1.1"
   }
 }
